force-app/main/default/objects/ffr__AccountingIntegration__mdt/ffr__AccountingIntegration__mdt.object-meta.xml
<CustomObject>
    <label>Accounting Integration</label>
    <pluralLabel>Accounting Integrations</pluralLabel>
</CustomObject>