force-app/main/default/objects/ffr__AccountingIntegration__mdt/fields/ffr__Callback__c.field-meta.xml
<CustomField>
    <fullName>ffr__Callback__c</fullName>
    <label>Callback Class</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>