force-app/main/default/objects/ffr__AccountingIntegration__mdt/fields/ffr__PeriodField__c.field-meta.xml
<CustomField>
    <fullName>ffr__PeriodField__c</fullName>
    <label>Period Field</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>