force-app/main/default/objects/ffr__AccountingIntegration__mdt/fields/ffr__PeriodObject__c.field-meta.xml
<CustomField>
    <fullName>ffr__PeriodObject__c</fullName>
    <label>Period Object</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>